# hot_cheese

./: .gitignore  Cargo.toml  NOTE  README  README.md  build.rs  build.sh  clean.sh  install.sh  make.sh  regenerate_from_backup.sh  sig.sh
MyApp.app/Contents/: Info.plist
examples/: add_existing.rs  add_master.rs  pin_cert.rs  simple_backup.rs
script/: add_master.sh  generate.sh  generate_certs.sh  generate_solana.sh  read.sh
src/: get_password.rs  lib.rs  main.rs  server.rs
src/crypto/: bytes_hex.rs  keystore.rs  mod.rs
src/mac/: get_password.rs  mod.rs  touch_id.rs
swift/: main.swift
