[package]
name = "hot_cheese"
version = "0.1.0"
edition = "2021"

[dependencies]
err_mac = { git = "https://github.com/copiumnicus/err_mac.git", rev = "08f6335" }
scrypt = { version = "0.10.0" }
aes = "0.8.0"
ctr = "0.9.0"
k256 = { version = "0.13.1", default-features = false, features = [
    "ecdsa",
    "std",
] }
serde = { version = "1.0.217", features = ["derive"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
rand = "0.8.5"
serde_json = "1.0.134"
zeroize = "1.8.1"

tokio = { version = "1.42.0", features = [
    "io-std",
    "macros",
    "net",
    "rt-multi-thread",
] }
rustls-pemfile = "2"
pki-types = { package = "rustls-pki-types", version = "1" }
http = "1"
hyper = { version = "1", default-features = false }
# hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "tokio"] }
hyper-util = { version = "0.1", default-features = false, features = [
    "server-auto",
    "tokio",
] }
rustls = { version = "0.23", default-features = false, features = [
    "tls12",
    "ring",
] }
http-body-util = "0.1"
tokio-rustls = { version = "0.26", default-features = false }

objc = "0.2.7"
block = "0.1.6"
dispatch = "0.2.0"
df-share = "0.1.1"

[dev-dependencies]
ureq = "2.12.1"
rpassword = "7.3.1"


[[bin]]
name = "hot_cheese"
path = "src/main.rs"